--- a/src/styles/_footer.scss
+++ b/src/styles/_footer.scss
@@ -179,7 +179,7 @@ $social-button-transition-time: 0.3s;
                     margin-left: -4%;
                     .content-sub {
                         width: 100%;
-                        height: 4.5vh;
+                        height: 4.9vh;
                         box-shadow: 2px 4px 10px rgba(75, 71, 71, 0.2);
                         border-radius: 60px;
                         /* border: 1px solid #534939; */
@@ -212,7 +212,7 @@ $social-button-transition-time: 0.3s;
                         border-radius: 60px;
                         outline: none;
                         margin: 1px;
-                        padding: 0 35px;
+                        padding: 1%;
                         cursor: pointer;
                         background-color: #1f1e1e;
                         color: #FFFFFF;
