--- a/src/styles/_home.scss
+++ b/src/styles/_home.scss
@@ -192,7 +192,7 @@
 .offer-section{
     width: 80vw;
     height: 80vh;
-    background-color: red;
+    border: 1px solid blue;
     margin: 0 auto;
     display: flex;
     flex-direction: column;
